--- a/lab3/css/Body.css
+++ b/lab3/css/Body.css
@@ -1,30 +1,74 @@
 
 body{
     min-width: 1400px;
+    background-color: Gainsboro;
 }
 
-.body{
-    background-color: darkgray;
-}
-
-.BlockSevenDays{
-    border-radius: 10px;
-    height: 500px;
-    background-image: url(https://cuzkov.github.io/JS_labs/lab3/images/BackGround.jpg);
-    background-size: cover;
-    margin: 0px 100px;
+.blockSevenDays{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
 }
 
-.BlockDay{
-    background-color: dimgray;
-    height: 200px;
-    width: 150px;
-    opacity: .3;
+.day{
+    background-color: white;
+    height: 180px;
+    width: 200px;
+    opacity: 0.5;
     margin: 15px 10px;
     border-radius: 5px;
     padding: 0px 10px;
+    font-size: 12px;
+    color: black;
+    font-weight: 800;
 }
 
+.dayFlex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.weatherIcon0{
+    width: 150px;
+    height: 150px;
+    filter: drop-shadow(0px 0px 1px black);
+}
+
+.weatherIcon1{
+    width: 45px;
+    height: 45px;;
+    filter: drop-shadow(0px 0px 3px black);
+}
+
+.BlockDate{
+    margin: 0px 100px;
+    border-radius: 10px;
+    border: 1px solid DarkGray;
+    height: 515px;
+    background-image: url(https://cuzkov.github.io/JS_labs/lab3/images/BackGround.jpg);
+    background-size: cover;
+    background-position: right 0px bottom 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.BlockCurrentDay{
+    width: 746px;
+    height: 315px;
+    background-color: white;
+    margin: 15px 10px;
+    border-radius: 5px;
+    opacity: 0.5;
+    padding: 0px 10px;
+    font-size: 23px;
+    display: flex;
+    flex-direction: column;
+}
+
+.CurrentDayDown{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
